--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     </div>
     <div class="controls">
-        <button id="Start">Start</button>
-        <button id="Pause">Pause</button>
-        <button id="Reset">Reset</button>
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <button id="reset">Reset</button>
     </div>
 </div>
 
